ProjectsServer/GameServer/QuestLoader/QuestLoader.output
Terminals unused in grammar

   GT_TOK
   LT_TOK
   GE_TOK
   LE_TOK
   EQUAL_TOK
   WORD_TOK


State 12 conflicts: 1 shift/reduce
State 253 conflicts: 1 shift/reduce


Grammar

    0 $accept: command_list $end

    1 command_list: command
    2             | command_list command

    3 command: user_variable_definition
    4        | quest_definition

    5 user_variable_definition: USER_VARIABLE_TOK '=' integer_expression ';'
    6                         | USER_VARIABLE_TOK '=' QSTRING_TOK ';'
    7                         | USER_VARIABLE_TOK '=' USER_VARIABLE_TOK ';'

    8 quest_definition: QUEST_TOK '(' INTEGER_TOK ')' '{' quest_content_list '}' ';'

    9 quest_content_list: quest_content
   10                   | quest_content_list quest_content

   11 quest_content: BASIC_INFO_TOK '{' statement_list '}' ';'
   12              | BASIC_INFO_TOK '{' '}' ';'
   13              | START_REQ_TOK '{' statement_list '}' ';'
   14              | START_REQ_TOK '{' '}' ';'
   15              | START_ACTION_TOK '{' statement_list '}' ';'
   16              | START_ACTION_TOK '{' '}' ';'
   17              | COMPLETION_REQ_TOK '{' statement_list '}' ';'
   18              | COMPLETION_REQ_TOK '{' '}' ';'
   19              | COMPLETION_ACTION_TOK '{' statement_list '}' ';'
   20              | COMPLETION_ACTION_TOK '{' '}' ';'

   21 statement_list: statement
   22               | statement_list statement

   23 statement: QUEST_INDEX_TOK '=' integer_expression ';'
   24          | QUEST_NAME_TOK '=' string_expression ';'
   25          | QUEST_EPISODE_TYPE_TOK '=' integer_expression ';'
   26          | QUEST_PARTYTYPE_TOK '=' integer_expression ';'
   27          | QUEST_KIND_TOK '=' integer_expression ';'
   28          | QUEST_TYPE_TOK '=' integer_expression ';'
   29          | QUEST_START_TYPE_TOK '=' integer_expression ';'
   30          | QUEST_END_TYPE_TOK '=' integer_expression ';'
   31          | QUEST_PARTY_MEMBERS_TOK '=' integer_expression ';'
   32          | QUEST_NPC_INFO_TOK '{' quest_npc_statement_list '}' ';'
   33          | DESCRIPTION_TOK '=' string_expression ';'
   34          | EVENT_MAP_TOK '=' integer_expression ';'
   35          | NEXT_QUEST_INDEX_TOK '=' integer_expression ';'
   36          | PARTY_QUEST_MEMBER_COUNT_TOK '=' integer_expression ';'
   37          | DROP_ITEM_TO_ALL_ATTACK_CHARACTER_TOK '=' boolean_value ';'
   38          | TIME_LIMIT_IN_MINUTES_TOK '=' integer_expression ';'
   39          | DISCARDABLE_QUEST_TOK '=' boolean_value ';'
   40          | BI_QUEST_ATTRI_IS_CITYWAR_TOK '=' boolean_value ';'
   41          | BI_QUEST_ATTRI_NEVER_COMPLETION_BY_USER_TOK '=' boolean_value ';'
   42          | DROP_ITEM_TO_ALL_PARTY_MEMBERS_TOK '=' boolean_value ';'
   43          | S_REQ_UNIT_KIND_TOK '=' integer_expression ';'
   44          | S_REQ_LEVEL_TOK '=' integer_range_value ';'
   45          | S_REQ_ATTACK_PART_TOK '=' integer_range_value ';'
   46          | S_REQ_DEFENSE_PART_TOK '=' integer_range_value ';'
   47          | S_REQ_FUEL_PART_TOK '=' integer_range_value ';'
   48          | S_REQ_SOUL_PART_TOK '=' integer_range_value ';'
   49          | S_REQ_SHIELD_PART_TOK '=' integer_range_value ';'
   50          | S_REQ_DODGE_PART_TOK '=' integer_range_value ';'
   51          | S_REQ_ITEM_TOK '=' item_w_count_value ';'
   52          | S_REQ_QUEST_INDEX_TOK '=' integer_expression ';'
   53          | S_REQ_RECV_QUEST_INDEX_TOK '=' integer_expression ';'
   54          | S_REQ_GUILD_TOK '=' integer_expression ';'
   55          | S_REQ_INFLUENCE_TYPE_TOK '=' integer_expression ';'
   56          | S_REQ_START_AREA_TOK '=' map_area_value ';'
   57          | S_PAY_ITEM_TOK '=' quest_pay_item_value ';'
   58          | S_DEL_ITEM_TOK '=' item_w_count_value ';'
   59          | S_START_MAP_INDEX_TOK '=' integer_expression ';'
   60          | S_START_PARTY_WARP_FLAG_TOK '=' boolean_value ';'
   61          | C_REQ_MEET_NPC_INFO_TOK '{' quest_npc_statement_list '}' ';'
   62          | C_REQ_MEET_OBJ_INDEX_TOK '=' integer_expression map_area_value ';'
   63          | C_REQ_ITEM_TOK '=' item_w_count_value ';'
   64          | C_REQ_ITEM_TOK '=' item_w_count_value FROM_TOK MONSTER_TOK '(' integer_expression ',' integer_expression '~' integer_expression ',' integer_expression ')' map_area_value ';'
   65          | C_REQ_ITEM_TOK '=' item_w_count_value FROM_TOK CHARACTER_TOK '(' integer_expression ',' integer_expression ',' integer_expression '~' integer_expression ',' integer_expression ')' map_area_value ';'
   66          | C_REQ_DEAD_BY_MONSTER_TOK '=' integer_expression ';'
   67          | C_REQ_MEET_MAP_AREA_TOK '=' map_area_value ';'
   68          | C_REQ_MONSTER_TOK '=' monster_w_count_value ';'
   69          | C_REQ_MONSTER_TOK '=' monster_w_count_value map_area_value ';'
   70          | C_REQ_MIX_ITEM_TARGET_TOK '=' item_w_count_value ';'
   71          | C_PAY_BONUS_STAT_TOK '=' integer_expression ';'
   72          | C_PAY_BONUS_SKILL_POINT_TOK '=' integer_expression ';'
   73          | C_PAY_FAME_TOK '=' integer_expression ';'
   74          | C_PAY_STATUS_TOK '=' integer_expression ';'
   75          | C_PAY_LEVEL_TOK '=' integer_expression ';'
   76          | C_PAY_EXPERIENCE_TOK '=' integer_expression ';'
   77          | C_PAY_WARP_MAP_INDEX_TOK '=' integer_expression ';'
   78          | C_DEL_ITEM_TOK '=' item_w_count_value ';'
   79          | C_PAY_ITEM_TOK '=' quest_pay_item_value ';'
   80          | C_PAY_ITEM_MISSIONMASTER_TOK '=' quest_missinmaster_pay_item_value ';'
   81          | C_RANDOM_PAY_ITEM_TOK '=' item_w_count_prob_list PER_TOK integer_expression ';'
   82          | C_MIX_ITEM_TOK '=' item_w_count_list R_ARROW_TOK integer_expression prob_value ';'
   83          | C_PAY_PROPENSITY_TOK '=' integer_expression ';'
   84          | C_CINEMA_NUM_TOK '=' integer_expression ';'
   85          | C_PAY_INFLUENCE_TYPE_TOK '=' integer_expression ';'

   86 item_w_count_prob_list: item_w_count_prob_value
   87                       | item_w_count_prob_list OR_TOK item_w_count_prob_value

   88 item_w_count_prob_value: integer_expression '(' integer_expression ',' integer_expression ')'

   89 item_w_count_list: item_w_count_value
   90                  | item_w_count_list '+' item_w_count_value

   91 map_area_value: /* empty */
   92               | AREA_TOK integer_expression '(' X_TOK integer_expression ',' Y_TOK integer_expression ',' R_TOK integer_expression ')'
   93               | AREA_TOK integer_expression

   94 integer_range_value: '(' integer_expression ')'
   95                    | '(' integer_expression '~' integer_expression ')'
   96                    | '(' integer_expression '~' ')'
   97                    | '(' '~' integer_expression ')'

   98 integer_expression: integer_expression '+' integer_expression
   99                   | integer_expression '-' integer_expression
  100                   | integer_expression '*' integer_expression
  101                   | integer_expression '/' integer_expression
  102                   | integer_expression AND_TOK integer_expression
  103                   | integer_expression OR_TOK integer_expression
  104                   | '(' integer_expression ')'
  105                   | INTEGER_TOK
  106                   | USER_VARIABLE_TOK

  107 string_expression: QSTRING_TOK
  108                  | USER_VARIABLE_TOK

  109 monster_w_count_value: integer_expression '(' integer_expression ')'
  110                      | integer_expression '(' ALL_TOK ')'

  111 item_w_count_value: integer_expression '(' integer_expression ')'
  112                   | integer_expression '(' ALL_TOK ')'

  113 quest_pay_item_value: item_w_count_value per_item_value attach_value to_unit_kind_value

  114 quest_missinmaster_pay_item_value: item_w_count_value per_item_value attach_value to_unit_kind_value

  115 quest_npc_statement_list: quest_npc_statement
  116                         | quest_npc_statement_list quest_npc_statement

  117 quest_npc_statement: NPC_INDEX_TOK '=' integer_expression ';'
  118                    | NPC_NAME_TOK '=' string_expression ';'
  119                    | PRE_TALK_TOK '=' string_expression ';'
  120                    | MID_TALK_TOK '=' string_expression ';'
  121                    | FAIL_TALK_TOK '=' string_expression ';'
  122                    | SUCCESS_TALK_TOK '=' string_expression ';'

  123 per_item_value: /* empty */
  124               | PER_TOK integer_expression

  125 attach_value: /* empty */
  126             | ATTACH_TOK

  127 to_unit_kind_value: /* empty */
  128                   | TO_TOK integer_expression

  129 boolean_value: TRUE_TOK
  130              | FALSE_TOK

  131 prob_value: PROB_100_TOK '(' integer_expression ')'
  132           | PROB_1K_TOK '(' integer_expression ')'
  133           | PROB_10K_TOK '(' integer_expression ')'
  134           | PROB_100K_TOK '(' integer_expression ')'
  135           | PROB_256_TOK '(' integer_expression ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8 64 65 88 92 94 95 96 97 104 109 110 111 112 131 132 133
    134 135
')' (41) 8 64 65 88 92 94 95 96 97 104 109 110 111 112 131 132 133
    134 135
'*' (42) 100
'+' (43) 90 98
',' (44) 64 65 88 92
'-' (45) 99
'/' (47) 101
';' (59) 5 6 7 8 11 12 13 14 15 16 17 18 19 20 23 24 25 26 27 28 29
    30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72 73 74 75 76 77 78 79 80 81 82 83 84 85 117 118 119 120 121 122
'=' (61) 5 6 7 23 24 25 26 27 28 29 30 31 33 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 62 63
    64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
    85 117 118 119 120 121 122
'{' (123) 8 11 12 13 14 15 16 17 18 19 20 32 61
'}' (125) 8 11 12 13 14 15 16 17 18 19 20 32 61
'~' (126) 64 65 95 96 97
error (256)
QUEST_TOK (258) 8
BASIC_INFO_TOK (259) 11 12
QUEST_INDEX_TOK (260) 23
QUEST_NAME_TOK (261) 24
QUEST_EPISODE_TYPE_TOK (262) 25
QUEST_PARTYTYPE_TOK (263) 26
QUEST_KIND_TOK (264) 27
QUEST_TYPE_TOK (265) 28
QUEST_START_TYPE_TOK (266) 29
QUEST_END_TYPE_TOK (267) 30
QUEST_PARTY_MEMBERS_TOK (268) 31
QUEST_NPC_INFO_TOK (269) 32
NPC_INDEX_TOK (270) 117
NPC_NAME_TOK (271) 118
PRE_TALK_TOK (272) 119
MID_TALK_TOK (273) 120
FAIL_TALK_TOK (274) 121
SUCCESS_TALK_TOK (275) 122
DESCRIPTION_TOK (276) 33
EVENT_MAP_TOK (277) 34
NEXT_QUEST_INDEX_TOK (278) 35
PARTY_QUEST_MEMBER_COUNT_TOK (279) 36
DROP_ITEM_TO_ALL_ATTACK_CHARACTER_TOK (280) 37
TIME_LIMIT_IN_MINUTES_TOK (281) 38
DISCARDABLE_QUEST_TOK (282) 39
BI_QUEST_ATTRI_IS_CITYWAR_TOK (283) 40
BI_QUEST_ATTRI_NEVER_COMPLETION_BY_USER_TOK (284) 41
DROP_ITEM_TO_ALL_PARTY_MEMBERS_TOK (285) 42
START_REQ_TOK (286) 13 14
S_REQ_UNIT_KIND_TOK (287) 43
S_REQ_LEVEL_TOK (288) 44
S_REQ_ATTACK_PART_TOK (289) 45
S_REQ_DEFENSE_PART_TOK (290) 46
S_REQ_FUEL_PART_TOK (291) 47
S_REQ_SOUL_PART_TOK (292) 48
S_REQ_SHIELD_PART_TOK (293) 49
S_REQ_DODGE_PART_TOK (294) 50
S_REQ_ITEM_TOK (295) 51
S_REQ_QUEST_INDEX_TOK (296) 52
S_REQ_RECV_QUEST_INDEX_TOK (297) 53
S_REQ_GUILD_TOK (298) 54
S_REQ_INFLUENCE_TYPE_TOK (299) 55
S_REQ_START_AREA_TOK (300) 56
START_ACTION_TOK (301) 15 16
S_PAY_ITEM_TOK (302) 57
S_DEL_ITEM_TOK (303) 58
S_START_MAP_INDEX_TOK (304) 59
S_START_PARTY_WARP_FLAG_TOK (305) 60
COMPLETION_REQ_TOK (306) 17 18
C_REQ_MEET_NPC_INFO_TOK (307) 61
C_REQ_ITEM_TOK (308) 63 64 65
C_REQ_MEET_OBJ_INDEX_TOK (309) 62
C_REQ_DEAD_BY_MONSTER_TOK (310) 66
C_REQ_MEET_MAP_AREA_TOK (311) 67
C_REQ_MONSTER_TOK (312) 68 69
C_REQ_MIX_ITEM_TARGET_TOK (313) 70
COMPLETION_ACTION_TOK (314) 19 20
C_PAY_BONUS_STAT_TOK (315) 71
C_PAY_BONUS_SKILL_POINT_TOK (316) 72
C_PAY_FAME_TOK (317) 73
C_PAY_STATUS_TOK (318) 74
C_PAY_LEVEL_TOK (319) 75
C_PAY_EXPERIENCE_TOK (320) 76
C_PAY_WARP_MAP_INDEX_TOK (321) 77
C_DEL_ITEM_TOK (322) 78
C_PAY_ITEM_TOK (323) 79
C_PAY_ITEM_MISSIONMASTER_TOK (324) 80
C_RANDOM_PAY_ITEM_TOK (325) 81
C_MIX_ITEM_TOK (326) 82
C_PAY_PROPENSITY_TOK (327) 83
C_CINEMA_NUM_TOK (328) 84
C_PAY_INFLUENCE_TYPE_TOK (329) 85
FROM_TOK (330) 64 65
TO_TOK (331) 128
MONSTER_TOK (332) 64
CHARACTER_TOK (333) 65
ALL_TOK (334) 110 112
ATTACH_TOK (335) 126
AREA_TOK (336) 92 93
X_TOK (337) 92
Y_TOK (338) 92
R_TOK (339) 92
PER_TOK (340) 81 124
PROB_100_TOK (341) 131
PROB_1K_TOK (342) 132
PROB_10K_TOK (343) 133
PROB_100K_TOK (344) 134
PROB_256_TOK (345) 135
AND_TOK (346) 102
OR_TOK (347) 87 103
TRUE_TOK (348) 129
FALSE_TOK (349) 130
R_ARROW_TOK (350) 82
GT_TOK (351)
LT_TOK (352)
GE_TOK (353)
LE_TOK (354)
EQUAL_TOK (355)
USER_VARIABLE_TOK (356) 5 6 7 106 108
INTEGER_TOK (357) 8 105
WORD_TOK (358)
QSTRING_TOK (359) 6 107


Nonterminals, with rules where they appear

$accept (117)
    on left: 0
command_list (118)
    on left: 1 2, on right: 0 2
command (119)
    on left: 3 4, on right: 1 2
user_variable_definition (120)
    on left: 5 6 7, on right: 3
quest_definition (121)
    on left: 8, on right: 4
quest_content_list (122)
    on left: 9 10, on right: 8 10
quest_content (123)
    on left: 11 12 13 14 15 16 17 18 19 20, on right: 9 10
statement_list (124)
    on left: 21 22, on right: 11 13 15 17 19 22
statement (125)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83 84 85, on right: 21 22
item_w_count_prob_list (126)
    on left: 86 87, on right: 81 87
item_w_count_prob_value (127)
    on left: 88, on right: 86 87
item_w_count_list (128)
    on left: 89 90, on right: 82 90
map_area_value (129)
    on left: 91 92 93, on right: 56 62 64 65 67 69
integer_range_value (130)
    on left: 94 95 96 97, on right: 44 45 46 47 48 49 50
integer_expression (131)
    on left: 98 99 100 101 102 103 104 105 106, on right: 5 23 25 26
    27 28 29 30 31 34 35 36 38 43 52 53 54 55 59 62 64 65 66 71 72
    73 74 75 76 77 81 82 83 84 85 88 92 93 94 95 96 97 98 99 100 101
    102 103 104 109 110 111 112 117 124 128 131 132 133 134 135
string_expression (132)
    on left: 107 108, on right: 24 33 118 119 120 121 122
monster_w_count_value (133)
    on left: 109 110, on right: 68 69
item_w_count_value (134)
    on left: 111 112, on right: 51 58 63 64 65 70 78 89 90 113 114
quest_pay_item_value (135)
    on left: 113, on right: 57 79
quest_missinmaster_pay_item_value (136)
    on left: 114, on right: 80
quest_npc_statement_list (137)
    on left: 115 116, on right: 32 61 116
quest_npc_statement (138)
    on left: 117 118 119 120 121 122, on right: 115 116
per_item_value (139)
    on left: 123 124, on right: 113 114
attach_value (140)
    on left: 125 126, on right: 113 114
to_unit_kind_value (141)
    on left: 127 128, on right: 113 114
boolean_value (142)
    on left: 129 130, on right: 37 39 40 41 42 60
prob_value (143)
    on left: 131 132 133 134 135, on right: 82


State 0

    0 $accept: . command_list $end

    QUEST_TOK          shift, and go to state 1
    USER_VARIABLE_TOK  shift, and go to state 2

    command_list              go to state 3
    command                   go to state 4
    user_variable_definition  go to state 5
    quest_definition          go to state 6


State 1

    8 quest_definition: QUEST_TOK . '(' INTEGER_TOK ')' '{' quest_content_list '}' ';'

    '('  shift, and go to state 7


State 2

    5 user_variable_definition: USER_VARIABLE_TOK . '=' integer_expression ';'
    6                         | USER_VARIABLE_TOK . '=' QSTRING_TOK ';'
    7                         | USER_VARIABLE_TOK . '=' USER_VARIABLE_TOK ';'

    '='  shift, and go to state 8


State 3

    0 $accept: command_list . $end
    2 command_list: command_list . command

    $end               shift, and go to state 9
    QUEST_TOK          shift, and go to state 1
    USER_VARIABLE_TOK  shift, and go to state 2

    command                   go to state 10
    user_variable_definition  go to state 5
    quest_definition          go to state 6


State 4

    1 command_list: command .

    $default  reduce using rule 1 (command_list)


State 5

    3 command: user_variable_definition .

    $default  reduce using rule 3 (command)


State 6

    4 command: quest_definition .

    $default  reduce using rule 4 (command)


State 7

    8 quest_definition: QUEST_TOK '(' . INTEGER_TOK ')' '{' quest_content_list '}' ';'

    INTEGER_TOK  shift, and go to state 11


State 8

    5 user_variable_definition: USER_VARIABLE_TOK '=' . integer_expression ';'
    6                         | USER_VARIABLE_TOK '=' . QSTRING_TOK ';'
    7                         | USER_VARIABLE_TOK '=' . USER_VARIABLE_TOK ';'

    USER_VARIABLE_TOK  shift, and go to state 12
    INTEGER_TOK        shift, and go to state 13
    QSTRING_TOK        shift, and go to state 14
    '('                shift, and go to state 15

    integer_expression  go to state 16


State 9

    0 $accept: command_list $end .

    $default  accept


State 10

    2 command_list: command_list command .

    $default  reduce using rule 2 (command_list)


State 11

    8 quest_definition: QUEST_TOK '(' INTEGER_TOK . ')' '{' quest_content_list '}' ';'

    ')'  shift, and go to state 17


State 12

    7 user_variable_definition: USER_VARIABLE_TOK '=' USER_VARIABLE_TOK . ';'
  106 integer_expression: USER_VARIABLE_TOK .

    ';'  shift, and go to state 18

    ';'       [reduce using rule 106 (integer_expression)]
    $default  reduce using rule 106 (integer_expression)


State 13

  105 integer_expression: INTEGER_TOK .

    $default  reduce using rule 105 (integer_expression)


State 14

    6 user_variable_definition: USER_VARIABLE_TOK '=' QSTRING_TOK . ';'

    ';'  shift, and go to state 19


State 15

  104 integer_expression: '(' . integer_expression ')'

    USER_VARIABLE_TOK  shift, and go to state 20
    INTEGER_TOK        shift, and go to state 13
    '('                shift, and go to state 15

    integer_expression  go to state 21


State 16

    5 user_variable_definition: USER_VARIABLE_TOK '=' integer_expression . ';'
   98 integer_expression: integer_expression . '+' integer_expression
   99                   | integer_expression . '-' integer_expression
  100                   | integer_expression . '*' integer_expression
  101                   | integer_expression . '/' integer_expression
  102                   | integer_expression . AND_TOK integer_expression
  103                   | integer_expression . OR_TOK integer_expression

    AND_TOK  shift, and go to state 22
    OR_TOK   shift, and go to state 23
    '-'      shift, and go to state 24
    '+'      shift, and go to state 25
    '/'      shift, and go to state 26
    '*'      shift, and go to state 27
    ';'      shift, and go to state 28


State 17

    8 quest_definition: QUEST_TOK '(' INTEGER_TOK ')' . '{' quest_content_list '}' ';'

    '{'  shift, and go to state 29


State 18

    7 user_variable_definition: USER_VARIABLE_TOK '=' USER_VARIABLE_TOK ';' .

    $default  reduce using rule 7 (user_variable_definition)


State 19

    6 user_variable_definition: USER_VARIABLE_TOK '=' QSTRING_TOK ';' .

    $default  reduce using rule 6 (user_variable_definition)


State 20

  106 integer_expression: USER_VARIABLE_TOK .

    $default  reduce using rule 106 (integer_expression)


State 21

   98 integer_expression: integer_expression . '+' integer_expression
   99                   | integer_expression . '-' integer_expression
  100                   | integer_expression . '*' integer_expression
  101                   | integer_expression . '/' integer_expression
  102                   | integer_expression . AND_TOK integer_expression
  103                   | integer_expression . OR_TOK integer_expression
  104                   | '(' integer_expression . ')'

    AND_TOK  shift, and go to state 22
    OR_TOK   shift, and go to state 23
    '-'      shift, and go to state 24
    '+'      shift, and go to state 25
    '/'      shift, and go to state 26
    '*'      shift, and go to state 27
    ')'      shift, and go to state 30


State 22

  102 integer_expression: integer_expression AND_TOK . integer_expression

    USER_VARIABLE_TOK  shift, and go to state 20
    INTEGER_TOK        shift, and go to state 13
    '('                shift, and go to state 15

    integer_expression  go to state 31


State 23

  103 integer_expression: integer_expression OR_TOK . integer_expression

    USER_VARIABLE_TOK  shift, and go to state 20
    INTEGER_TOK        shift, and go to state 13
    '('                shift, and go to state 15

    integer_expression  go to state 32


State 24

   99 integer_expression: integer_expression '-' . integer_expression

    USER_VARIABLE_TOK  shift, and go to state 20
    INTEGER_TOK        shift, and go to state 13
    '('                shift, and go to state 15

    integer_expression  go to state 33


State 25

   98 integer_expression: integer_expression '+' . integer_expression

    USER_VARIABLE_TOK  shift, and go to state 20
    INTEGER_TOK        shift, and go to state 13
    '('                shift, and go to state 15

    integer_expression  go to state 34


State 26

  101 integer_expression: integer_expression '/' . integer_expression

    USER_VARIABLE_TOK  shift, and go to state 20
    INTEGER_TOK        shift, and go to state 13
    '('                shift, and go to state 15

    integer_expression  go to state 35


State 27

  100 integer_expression: integer_expression '*' . integer_expression

    USER_VARIABLE_TOK  shift, and go to state 20
    INTEGER_TOK        shift, and go to state 13
    '('                shift, and go to state 15

    integer_expression  go to state 36


State 28

    5 user_variable_definition: USER_VARIABLE_TOK '=' integer_expression ';' .

    $default  reduce using rule 5 (user_variable_definition)


State 29

    8 quest_definition: QUEST_TOK '(' INTEGER_TOK ')' '{' . quest_content_list '}' ';'

    BASIC_INFO_TOK         shift, and go to state 37
    START_REQ_TOK          shift, and go to state 38
    START_ACTION_TOK       shift, and go to state 39
    COMPLETION_REQ_TOK     shift, and go to state 40
    COMPLETION_ACTION_TOK  shift, and go to state 41

    quest_content_list  go to state 42
    quest_content       go to state 43


State 30

  104 integer_expression: '(' integer_expression ')' .

    $default  reduce using rule 104 (integer_expression)


State 31

   98 integer_expression: integer_expression . '+' integer_expression
   99                   | integer_expression . '-' integer_expression
  100                   | integer_expression . '*' integer_expression
  101                   | integer_expression . '/' integer_expression
  102                   | integer_expression . AND_TOK integer_expression
  102                   | integer_expression AND_TOK integer_expression .
  103                   | integer_expression . OR_TOK integer_expression

    $default  reduce using rule 102 (integer_expression)


State 32

   98 integer_expression: integer_expression . '+' integer_expression
   99                   | integer_expression . '-' integer_expression
  100                   | integer_expression . '*' integer_expression
  101                   | integer_expression . '/' integer_expression
  102                   | integer_expression . AND_TOK integer_expression
  103                   | integer_expression . OR_TOK integer_expression
  103                   | integer_expression OR_TOK integer_expression .

    $default  reduce using rule 103 (integer_expression)


State 33

   98 integer_expression: integer_expression . '+' integer_expression
   99                   | integer_expression . '-' integer_expression
   99                   | integer_expression '-' integer_expression .
  100                   | integer_expression . '*' integer_expression
  101                   | integer_expression . '/' integer_expression
  102                   | integer_expression . AND_TOK integer_expression
  103                   | integer_expression . OR_TOK integer_expression

    AND_TOK  shift, and go to state 22
    OR_TOK   shift, and go to state 23
    '/'      shift, and go to state 26
    '*'      shift, and go to state 27

    $default  reduce using rule 99 (integer_expression)


State 34

   98 integer_expression: integer_expression . '+' integer_expression
   98                   | integer_expression '+' integer_expression .
   99                   | integer_expression . '-' integer_expression
  100                   | integer_expression . '*' integer_expression
  101                   | integer_expression . '/' integer_expression
  102                   | integer_expression . AND_TOK integer_expression
  103                   | integer_expression . OR_TOK integer_expression

    AND_TOK  shift, and go to state 22
    OR_TOK   shift, and go to state 23
    '/'      shift, and go to state 26
    '*'      shift, and go to state 27

    $default  reduce using rule 98 (integer_expression)


State 35

   98 integer_expression: integer_expression . '+' integer_expression
   99                   | integer_expression . '-' integer_expression
  100                   | integer_expression . '*' integer_expression
  101                   | integer_expression . '/' integer_expression
  101                   | integer_expression '/' integer_expression .
  102                   | integer_expression . AND_TOK integer_expression
  103                   | integer_expression . OR_TOK integer_expression

    AND_TOK  shift, and go to state 22
    OR_TOK   shift, and go to state 23

    $default  reduce using rule 101 (integer_expression)


State 36

   98 integer_expression: integer_expression . '+' integer_expression
   99                   | integer_expression . '-' integer_expression
  100                   | integer_expression . '*' integer_expression
  100                   | integer_expression '*' integer_expression .
  101                   | integer_expression . '/' integer_expression
  102                   | integer_expression . AND_TOK integer_expression
  103                   | integer_expression . OR_TOK integer_expression

    AND_TOK  shift, and go to state 22
    OR_TOK   shift, and go to state 23

    $default  reduce using rule 100 (integer_expression)


State 37

   11 quest_content: BASIC_INFO_TOK . '{' statement_list '}' ';'
   12              | BASIC_INFO_TOK . '{' '}' ';'

    '{'  shift, and go to state 44


State 38

   13 quest_content: START_REQ_TOK . '{' statement_list '}' ';'
   14              | START_REQ_TOK . '{' '}' ';'

    '{'  shift, and go to state 45


State 39

   15 quest_content: START_ACTION_TOK . '{' statement_list '}' ';'
   16              | START_ACTION_TOK . '{' '}' ';'

    '{'  shift, and go to state 46


State 40

   17 quest_content: COMPLETION_REQ_TOK . '{' statement_list '}' ';'
   18              | COMPLETION_REQ_TOK . '{' '}' ';'

    '{'  shift, and go to state 47


State 41

   19 quest_content: COMPLETION_ACTION_TOK . '{' statement_list '}' ';'
   20              | COMPLETION_ACTION_TOK . '{' '}' ';'

    '{'  shift, and go to state 48


State 42

    8 quest_definition: QUEST_TOK '(' INTEGER_TOK ')' '{' quest_content_list . '}' ';'
   10 quest_content_list: quest_content_list . quest_content

    BASIC_INFO_TOK         shift, and go to state 37
    START_REQ_TOK          shift, and go to state 38
    START_ACTION_TOK       shift, and go to state 39
    COMPLETION_REQ_TOK     shift, and go to state 40
    COMPLETION_ACTION_TOK  shift, and go to state 41
    '}'                    shift, and go to state 49

    quest_content  go to state 50


State 43

    9 quest_content_list: quest_content .

    $default  reduce using rule 9 (quest_content_list)


State 44

   11 quest_content: BASIC_INFO_TOK '{' . statement_list '}' ';'
   12              | BASIC_INFO_TOK '{' . '}' ';'

    QUEST_INDEX_TOK                              shift, and go to state 51
    QUEST_NAME_TOK                               shift, and go to state 52
    QUEST_EPISODE_TYPE_TOK                       shift, and go to state 53
    QUEST_PARTYTYPE_TOK                          shift, and go to state 54
    QUEST_KIND_TOK                               shift, and go to state 55
    QUEST_TYPE_TOK                               shift, and go to state 56
    QUEST_START_TYPE_TOK                         shift, and go to state 57
    QUEST_END_TYPE_TOK                           shift, and go to state 58
    QUEST_PARTY_MEMBERS_TOK                      shift, and go to state 59
    QUEST_NPC_INFO_TOK                           shift, and go to state 60
    DESCRIPTION_TOK                              shift, and go to state 61
    EVENT_MAP_TOK                                shift, and go to state 62
    NEXT_QUEST_INDEX_TOK                         shift, and go to state 63
    PARTY_QUEST_MEMBER_COUNT_TOK                 shift, and go to state 64
    DROP_ITEM_TO_ALL_ATTACK_CHARACTER_TOK        shift, and go to state 65
    TIME_LIMIT_IN_MINUTES_TOK                    shift, and go to state 66
    DISCARDABLE_QUEST_TOK                        shift, and go to state 67
    BI_QUEST_ATTRI_IS_CITYWAR_TOK                shift, and go to state 68
    BI_QUEST_ATTRI_NEVER_COMPLETION_BY_USER_TOK  shift, and go to state 69
    DROP_ITEM_TO_ALL_PARTY_MEMBERS_TOK           shift, and go to state 70
    S_REQ_UNIT_KIND_TOK                          shift, and go to state 71
    S_REQ_LEVEL_TOK                              shift, and go to state 72
    S_REQ_ATTACK_PART_TOK                        shift, and go to state 73
    S_REQ_DEFENSE_PART_TOK                       shift, and go to state 74
    S_REQ_FUEL_PART_TOK                          shift, and go to state 75
    S_REQ_SOUL_PART_TOK                          shift, and go to state 76
    S_REQ_SHIELD_PART_TOK                        shift, and go to state 77
    S_REQ_DODGE_PART_TOK                         shift, and go to state 78
    S_REQ_ITEM_TOK                               shift, and go to state 79
    S_REQ_QUEST_INDEX_TOK                        shift, and go to state 80
    S_REQ_RECV_QUEST_INDEX_TOK                   shift, and go to state 81
    S_REQ_GUILD_TOK                              shift, and go to state 82
    S_REQ_INFLUENCE_TYPE_TOK                     shift, and go to state 83
    S_REQ_START_AREA_TOK                         shift, and go to state 84
    S_PAY_ITEM_TOK                               shift, and go to state 85
    S_DEL_ITEM_TOK                               shift, and go to state 86
    S_START_MAP_INDEX_TOK                        shift, and go to state 87
    S_START_PARTY_WARP_FLAG_TOK                  shift, and go to state 88
    C_REQ_MEET_NPC_INFO_TOK                      shift, and go to state 89
    C_REQ_ITEM_TOK                               shift, and go to state 90
    C_REQ_MEET_OBJ_INDEX_TOK                     shift, and go to state 91
    C_REQ_DEAD_BY_MONSTER_TOK                    shift, and go to state 92
    C_REQ_MEET_MAP_AREA_TOK                      shift, and go to state 93
    C_REQ_MONSTER_TOK                            shift, and go to state 94
    C_REQ_MIX_ITEM_TARGET_TOK                    shift, and go to state 95
    C_PAY_BONUS_STAT_TOK                         shift, and go to state 96
    C_PAY_BONUS_SKILL_POINT_TOK                  shift, and go to state 97
    C_PAY_FAME_TOK                               shift, and go to state 98
    C_PAY_STATUS_TOK                             shift, and go to state 99
    C_PAY_LEVEL_TOK                              shift, and go to state 100
    C_PAY_EXPERIENCE_TOK                         shift, and go to state 101
    C_PAY_WARP_MAP_INDEX_TOK                     shift, and go to state 102
    C_DEL_ITEM_TOK                               shift, and go to state 103
    C_PAY_ITEM_TOK                               shift, and go to state 104
    C_PAY_ITEM_MISSIONMASTER_TOK                 shift, and go to state 105
    C_RANDOM_PAY_ITEM_TOK                        shift, and go to state 106
    C_MIX_ITEM_TOK                               shift, and go to state 107
    C_PAY_PROPENSITY_TOK                         shift, and go to state 108
    C_CINEMA_NUM_TOK                             shift, and go to state 109
    C_PAY_INFLUENCE_TYPE_TOK                     shift, and go to state 110
    '}'                                          shift, and go to state 111

    statement_list  go to state 112
    statement       go to state 113


State 45

   13 quest_content: START_REQ_TOK '{' . statement_list '}' ';'
   14              | START_REQ_TOK '{' . '}' ';'
